language/move-lang/tests/move_check/typing/pack_constraint_not_satisfied.exp
error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
   │
 3 │     struct R<T:resource>  { r: T }
   │                -------- 'resource' constraint declared here
   ·
 7 │         R {r:_ } = R { r: 0 };
   │         ^^^^^^^^ Constraint not satisfied.
   │                           - The type's constraint information was determined here
   │                           - The copyable type 'u64' does not satisfy the constraint 'resource'
   │

error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
   │
 3 │     struct R<T:resource>  { r: T }
   │                -------- 'resource' constraint declared here
   ·
 7 │         R {r:_ } = R { r: 0 };
   │                    ^^^^^^^^^^ Constraint not satisfied.
   │                           - The type's constraint information was determined here
   │                           - The copyable type 'u64' does not satisfy the constraint 'resource'
   │

error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
   │
 2 │     resource struct Coin {}
   │     -------- The type's constraint information was determined here
 3 │     struct R<T:resource>  { r: T }
 4 │     struct S<T:copyable> { c: T }
   │                -------- 'copyable' constraint declared here
   ·
 8 │         S { c: Coin {} };
   │         ^^^^^^^^^^^^^^^^ Constraint not satisfied.
   │                ------- The resource type '0x8675309::M::Coin' does not satisfy the constraint 'copyable'
   │

error: 

   ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
   │
 2 │     resource struct Coin {}
   │     -------- Is found to be a non-copyable type here
   ·
 8 │         S { c: Coin {} };
   │         ---------------- The type: '0x8675309::M::S<0x8675309::M::Coin>'
   │         ^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:12 ───
    │
  3 │     struct R<T:resource>  { r: T }
    │            - The type's constraint information was determined here
    │                -------- 'resource' constraint declared here
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │         ^^^^^^^^^^^^^^^^^^ Constraint not satisfied.
    │                                     ---------- The copyable type '0x8675309::M::R<u64>' does not satisfy the constraint 'resource'
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
    │
  3 │     struct R<T:resource>  { r: T }
    │                -------- 'resource' constraint declared here
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │               ^^^^^^^^^^ Constraint not satisfied.
    │                                            - The type's constraint information was determined here
    │                                            - The copyable type 'u64' does not satisfy the constraint 'resource'
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:12 ───
    │
  3 │     struct R<T:resource>  { r: T }
    │            - The type's constraint information was determined here
    │                -------- 'resource' constraint declared here
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                              ^^^^^^^^^^^^^^^^^^ Constraint not satisfied.
    │                                     ---------- The copyable type '0x8675309::M::R<u64>' does not satisfy the constraint 'resource'
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:3:16 ───
    │
  3 │     struct R<T:resource>  { r: T }
    │                -------- 'resource' constraint declared here
    ·
 12 │         R {r: R { r: _ } } = R { r: R { r: 0 }};
    │                                     ^^^^^^^^^^ Constraint not satisfied.
    │                                            - The type's constraint information was determined here
    │                                            - The copyable type 'u64' does not satisfy the constraint 'resource'
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
    │
  2 │     resource struct Coin {}
    │     -------- The type's constraint information was determined here
  3 │     struct R<T:resource>  { r: T }
  4 │     struct S<T:copyable> { c: T }
    │                -------- 'copyable' constraint declared here
    ·
 13 │         S { c: S { c: Coin {} } };
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Constraint not satisfied.
    │                ---------------- The resource type '0x8675309::M::S<0x8675309::M::Coin>' does not satisfy the constraint 'copyable'
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
    │
  2 │     resource struct Coin {}
    │     -------- Is found to be a non-copyable type here
    ·
 13 │         S { c: S { c: Coin {} } };
    │         ------------------------- The type: '0x8675309::M::S<0x8675309::M::S<0x8675309::M::Coin>>'
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    │

error: 

    ┌── tests/move_check/typing/pack_constraint_not_satisfied.move:2:5 ───
    │
  2 │     resource struct Coin {}
    │     -------- The type's constraint information was determined here
  3 │     struct R<T:resource>  { r: T }
  4 │     struct S<T:copyable> { c: T }
    │                -------- 'copyable' constraint declared here
    ·
 13 │         S { c: S { c: Coin {} } };
    │                ^^^^^^^^^^^^^^^^ Constraint not satisfied.
    │                       ------- The resource type '0x8675309::M::Coin' does not satisfy the constraint 'copyable'
    │

